@startuml backend_domain_model
skinparam style strictuml
title "Backend Domain Model"

class Device {
  id : String
  name : String
  last_seen : DateTime
}

class Component {
  device_id : String
  local_id : String
  model_name : String
  component_type : String
}

class Measurement {
  device_id : String
  component_local_id : String
  created_at : DateTime
  mean_adc : Integer
  moisture_percent : Integer
}

class DeviceConfig {
  device_id : String
  heartbeat_interval : Integer
  desired_config_id : String
  applied_config_id : String
}

class SensorConfig {
  device_id : String
  component_local_id : String
  is_enabled : Boolean
  sample_interval : Integer
  desired_config_id : String
  applied_config_id : String
}

Device "1" -- "0..*" Component
Component "1" -- "0..*" Measurement
Device "1" -- "0..1" DeviceConfig
Component "1" -- "0..1" SensorConfig

@enduml
